# debuff

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  redux.py  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
backend/: .gitignore  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
backend/debuff/: main.py
backend/debuff/api/routes/: addresses.py  api.py  impairments.py  interfaces.py  routing.py  tcconfig.py
backend/debuff/core/: config.py
backend/debuff/models/: TcModel.py  enums.py
backend/debuff/services/: .gitignore  addresses.py  debuff-network.service  funcs.py  impairments.py  interfaces.py  linux_tools.py  parser.py  save_config.py  shell_commands.py  shell_ethtool.py  shell_ip_addr.py  shell_ip_link.py  shell_ip_route.py  shell_netplan.py  shell_tcconfig.py  tcconfig.py  utilities.py
backend/tests/: conftest.py  test_debuff.py  test_interfaces.py
containers/: Dockerfile  README.md  debuff.yml
frontend/debuff/: README.md  package-lock.json  package.json
frontend/debuff/src/: App.vue  main.ts
frontend/debuff/src/components/ImpairmentPanels/: ImpairmentPanel.vue  InterfaceImpairmentForm.vue
frontend/debuff/src/components/InterfacePanels/: InterfaceImpairmentForm.vue  InterfacePanel.vue
frontend/debuff/src/components/InterfaceTabs/: InterfaceTabs.vue
frontend/debuff/src/components/SideBar/: SideBarNav.vue
frontend/debuff/src/components/TopBar/: TopBar.vue
frontend/debuff/src/router/: index.ts
frontend/debuff/src/views/: Home.vue  Impairments.vue  Interfaces.vue
