[tool.poetry]
name = "debuff"
version = "0.1.0"
description = "A network traffic impairment utility that combines Linux networking with a tc qdisc wrapper and a custom Web UI."
authors = ["Mike Pfeiffer", "Dustin Rosarius"]
packages = [
    { include = "debuff", from = "backend"},
]

[tool.poetry.scripts]
start = "debuff.main:start"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flakehell = "^0.9.0"
tox = "^3.24.4"
black = "^21.9b0"
isort = "^5.9.3"
pytest-cov = "^2.12.1"
tox-gh-actions = "^2.7.0"
pre-commit = "^2.15.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=debuff"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "debuff"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
exclude = "venv"

[tool.flakehell]
max-line-length = 100
exclude = ["README.rst", "README.md", ".git", "venv", ".tests", ".mypy_cache", ".pytest_cache"]
format = "colored"
show_source = true
extended_default_ignore=[]

[tool.flakehell.plugins]
pycodestyle = ["+*", "-E501"]
pyflakes = ["+*"]
flake8-commas = ["+*"]
flake8-quotes = ["+*"]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]


[tool.isort]
profile = "black"
multi_line_output = 3
known_third_party = ["debuff", "fastapi", "pydantic", "pytest", "starlette", "uvicorn"]